--- a/teaching.html
+++ b/teaching.html
@@ -144,7 +144,7 @@
                 <div class="course-description">The University of Western Australia (2025)</div>
                 <div class="course-responsibilities">
                     <p>Collaborated with the unit coordinator (Prof. Steven Schilizzi) to achieve the fifth learning objective of this unit: 
-                        To understand the experimental design principles needed for investigating business behavior in environmental contexts.</p>
+                        To understand the experimental design principles needed for investigating business behaviour in environmental contexts.</p>
                 </div>
             </div>
             <div class="teaching-entry">
