--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -27,25 +27,26 @@
         }
         header {
             text-align: center;
-            padding: 20px 0;
+            padding: 15px 0;
             border-bottom: 2px solid #333;
             background-color: white;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         h1 {
-            font-size: 2em;
+            font-size: 1.8em;
             margin: 0;
             color: #2c3e50;
         }
         header h2 {
             border-bottom: none;
             color: #555;
-            margin-top: 5px;
-            margin-bottom: 10px;
+            margin-top: 3px;
+            margin-bottom: 8px;
+            font-size: 1.3em;
         }
         nav {
-            margin-top: 10px;
+            margin-top: 6px;
         }
         nav ul {
             padding: 0;
@@ -71,12 +72,12 @@
             align-items: flex-start;
             width: 90%;
             max-width: 1000px;
-            margin: 0 auto 30px auto;
+            margin: 0 auto 20px auto;
             background: white;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 4px;
             overflow: hidden;
-            height: 80vh; /* Optimal height for viewing */
+            height: 90vh; /* Increased height to show more of the document */
         }
         iframe {
             width: 100%;
@@ -98,16 +99,24 @@
         }
         @media (max-width: 768px) {
             header {
-                padding: 15px 0;
+                padding: 10px 0;
             }
             .pdf-container {
                 width: 95%;
-                height: 75vh;
+                height: 85vh;
+            }
+            h1 {
+                font-size: 1.6em;
+            }
+            header h2 {
+                font-size: 1.2em;
+                margin-top: 2px;
+                margin-bottom: 5px;
             }
         }
         @media (min-width: 1600px) {
             .pdf-container {
-                height: 85vh;
+                height: 92vh;
                 max-width: 1200px;
             }
         }
