--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Daniel Martínez Felip</h1>
+            <h1>Daniel Martínez-Felip</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
