--- a/research.html
+++ b/research.html
@@ -145,6 +145,10 @@
                     <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behavior change normative expectations regarding socially beneficial actions?</a>
                     with Steven G.M. Schilizzi and Chi Nguyen
                 </p>
+                <p>
+                    <a>From disapproval to social exclusion: the endogenous formation of social incentives for socially beneficial behaviors</a>
+                    with Steven G.M. Schilizzi and Chi Nguyen
+                </p>
             </div>
         </div>
     </div>
