--- a/research.html
+++ b/research.html
@@ -142,12 +142,12 @@
             <div class="section">
                 <h2>Working Papers</h2>
                 <p>
-                    <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behavior change normative expectations regarding socially beneficial actions?</a>
-                    with Steven G.M. Schilizzi and Chi Nguyen
+                    <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behavior change normative expectations regarding socially beneficial actions?</a><br>
+                    <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
                 <p>
-                    <a>From disapproval to social exclusion: the endogenous formation of social incentives for socially beneficial behaviors</a>
-                    with Steven G.M. Schilizzi and Chi Nguyen
+                    From disapproval to social exclusion: the endogenous formation of social incentives for socially beneficial behaviors
+                    <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
             </div>
         </div>
