--- a/index.html
+++ b/index.html
@@ -94,25 +94,34 @@
     .contact-icons {
         display: flex;
         flex-wrap: wrap;
-        gap: 12px;
+        gap: 15px;
         margin-top: 10px;
+        justify-content: flex-start;
     }
-    .contact-icons a {
-        color: #2c3e50;
-        font-size: 1.2em;
+    .contact-link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #767676 !important;
+        text-decoration: none;
         transition: color 0.3s ease;
     }
-    .contact-icons a:hover {
-        color: #1a73e8;
+    .contact-link:hover {
+        color: #2c3e50 !important;
     }
-    .contact-icons i {
-        width: 20px;
-        height: 20px;
+    .contact-link i {
+        font-size: 1.3em;
+        margin-bottom: 4px;
+    }
+    .contact-link svg {
+        margin-bottom: 4px;
+        height: 1.3em;
+        width: auto;
+    }
+    .contact-link span {
+        font-size: 0.75em;
         text-align: center;
-    }
-    .bluesky-icon {
-        width: 20px;
-        height: 20px;
+        white-space: nowrap;
     }
     @media (max-width: 768px) {
         .content-table, .content-table tbody, .content-table tr, .content-table td {
@@ -144,22 +153,30 @@
                 <tr>
                     <td class="image-contact">
                         <img src="me.jpg" alt="Daniel Martínez Felip">
+                        
+                        <h2>Contact</h2>
                         <div class="contact-icons">
-                            <a href="mailto:daniel.martinezfelip@research.uwa.edu.au" title="Email">
+                            <a href="mailto:daniel.martinezfelip@research.uwa.edu.au" class="contact-link">
                                 <i class="fas fa-envelope"></i>
+                                <span>Email</span>
                             </a>
-                            <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip" title="UWA Profile">
+                            <a href="https://research-repository.uwa.edu.au/en/persons/daniel-martinez-felip" class="contact-link">
                                 <i class="fas fa-graduation-cap"></i>
+                                <span>UWA</span>
                             </a>
-                            <a href="https://orcid.org/0009-0000-6979-904X" title="ORCiD">
+                            <a href="https://orcid.org/0009-0000-6979-904X" class="contact-link">
                                 <i class="fab fa-orcid"></i>
+                                <span>ORCiD</span>
                             </a>
-                            <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4" title="LinkedIn">
+                            <a href="http://www.linkedin.com/in/daniel-mart%C3%ADnez-felip-9744001a4" class="contact-link">
                                 <i class="fab fa-linkedin"></i>
+                                <span>LinkedIn</span>
                             </a>
-                            <a href="https://bsky.app/profile/dmartinezfelip.bsky.social" title="Bluesky">
-                               <svg viewBox="-50 -70 430 390" aria-hidden="true" height="1.1em"><path d="M180 141.964C163.699 110.262 119.308 51.1817 78.0347 22.044C38.4971 -5.86834 23.414 -1.03207 13.526 3.43594C2.08093 8.60755 0 26.1785 0 36.5164C0 46.8542 5.66748 121.272 9.36416 133.694C21.5786 174.738 65.0603 188.607 105.104 184.156C107.151 183.852 109.227 183.572 111.329 183.312C109.267 183.642 107.19 183.924 105.104 184.156C46.4204 192.847 -5.69621 214.233 62.6582 290.33C137.848 368.18 165.705 273.637 180 225.702C194.295 273.637 210.76 364.771 295.995 290.33C360 225.702 313.58 192.85 254.896 184.158C252.81 183.926 250.733 183.645 248.671 183.315C250.773 183.574 252.849 183.855 254.896 184.158C294.94 188.61 338.421 174.74 350.636 133.697C354.333 121.275 360 46.8568 360 36.519C360 26.1811 357.919 8.61012 346.474 3.43851C336.586 -1.02949 321.503 -5.86576 281.965 22.0466C240.692 51.1843 196.301 110.262 180 141.964Z" fill="#767676"></path></svg>
+                            <a href="https://bsky.app/profile/dmartinezfelip.bsky.social" class="contact-link">
+                                <svg viewBox="-50 -70 430 390" aria-hidden="true" height="1.1em" fill="currentColor">
+                                    <path d="M180 141.964C163.699 110.262 119.308 51.1817 78.0347 22.044C38.4971 -5.86834 23.414 -1.03207 13.526 3.43594C2.08093 8.60755 0 26.1785 0 36.5164C0 46.8542 5.66748 121.272 9.36416 133.694C21.5786 174.738 65.0603 188.607 105.104 184.156C107.151 183.852 109.227 183.572 111.329 183.312C109.267 183.642 107.19 183.924 105.104 184.156C46.4204 192.847 -5.69621 214.233 62.6582 290.33C137.848 368.18 165.705 273.637 180 225.702C194.295 273.637 210.76 364.771 295.995 290.33C360 225.702 313.58 192.85 254.896 184.158C252.81 183.926 250.733 183.645 248.671 183.315C250.773 183.574 252.849 183.855 254.896 184.158C294.94 188.61 338.421 174.74 350.636 133.697C354.333 121.275 360 46.8568 360 36.519C360 26.1811 357.919 8.61012 346.474 3.43851C336.586 -1.02949 321.503 -5.86576 281.965 22.0466C240.692 51.1843 196.301 110.262 180 141.964Z"/>
                                 </svg>
+                                <span>Bluesky</span>
                             </a>
                         </div>
                         
