--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: #767676 !important;
+        color: #2c3e50 !important;
         text-decoration: none;
         transition: color 0.3s ease;
     }
     .contact-link:hover {
-        color: #2c3e50 !important;
+        color: #1a73e8 !important;
     }
     .contact-link i {
         font-size: 1.3em;
@@ -154,7 +154,6 @@
                     <td class="image-contact">
                         <img src="me.jpg" alt="Daniel Martínez Felip">
                         
-                        <h2>Contact</h2>
                         <div class="contact-icons">
                             <a href="mailto:daniel.martinezfelip@research.uwa.edu.au" class="contact-link">
                                 <i class="fas fa-envelope"></i>
@@ -205,7 +204,7 @@
                     <h2>About Me</h2>
                     <p>Currently, I am a PhD Candidate in the <a href="https://www.uwaceep.org/research-students">Center for Environmental Economics & Policy</a> at the UWA School of Agriculture and Environment. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
                     <h2>Research Interests</h2>
-                    <p>Behavioural and Experimental economics · Collective action problems · Climate change · Social norms</p>
+                    <p>Behavioural and Experimental economics · Collective action problems · Social norms</p>
                 </td>
             </tr>
         </table>
