--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <table class="content-table">
                 <tr>
                     <td class="image-contact">
-                        <img src="me.jpg" alt="Daniel Martínez Felip">
+                        <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
                         
                         <div class="contact-icons">
                             <a href="mailto:daniel.martinezfelip@research.uwa.edu.au" class="contact-link">
