--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         width: 25%;
     }
     .image-contact img {
-        max-width: 80%;
+        max-width: 100%; /* Changed from 80% to 100% */
         height: auto;
         border-radius: 5px;
         object-fit: contain;
@@ -178,18 +178,18 @@
                         <h2>Research</h2>
                         <p class="contact-info"> 
                              <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">
-                                Google Scholar
-                            </a>
+                                 Google Scholar
+                             </a>
                         </p>
                         <p class="contact-info">
                             <a href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
-              ResearchGate
-                            </a>
+                   ResearchGate
+                             </a>
                         </p>
                         <p class="contact-info">
                             <a href="https://ideas.repec.org/f/pma3358.html">
-              RePEc
-                            </a>
+                   RePEc
+                             </a>
                         </p>
                         <h2>Useful Open Source Software</h2>
                         <p><a href="https://www.otree.org/">oTree</a></p>
