--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         width: 25%;
     }
     .image-contact img {
-        max-width: 100%; /* Changed from 80% to 100% */
+        max-width: 100%;
         height: auto;
         border-radius: 5px;
         object-fit: contain;
