--- a/research.html
+++ b/research.html
@@ -146,7 +146,7 @@
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
                 <p>
-                    From disapproval to social exclusion: the endogenous formation of social incentives for collectively beneficial behaviors<br>
+                    From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors<br>
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
             </div>
