--- a/research.html
+++ b/research.html
@@ -142,11 +142,11 @@
             <div class="section">
                 <h2>Working Papers</h2>
                 <p>
-                    <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behavior change normative expectations regarding socially beneficial actions?</a><br>
+                    <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behaviour change normative expectations regarding socially beneficial actions?</a><br>
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
                 <p>
-                    From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors<br>
+                    From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours<br>
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
             </div>
