--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
             <div class="section">
                 <h2>Working Papers</h2>
                 <p>
-                    <a href="https://osf.io/preprints/socarxiv/vy6z2_v3">How does experienced behaviour change normative expectations regarding socially beneficial actions?</a><br>
+                    <a href="https://doi.org/10.31235/osf.io/vy6z2_v5">How does experienced behaviour change normative expectations regarding socially beneficial actions?</a><br>
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
                 <p>
