--- a/research.html
+++ b/research.html
@@ -147,7 +147,7 @@
                 </p>
                 <p>
                     From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours<br>
-                    <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
+                    <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em>
                 </p>
             </div>
         </div>
