--- a/research.html
+++ b/research.html
@@ -146,7 +146,7 @@
                     <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
                 </p>
                 <p>
-                    From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours<br>
+href="https://doi.org/10.31235/osf.io/j7usg_v1">From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours</a><br>
                     <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em>
                 </p>
             </div>
