--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
                         
                         <div class="contact-icons">
-                            <a href="mailto:daniel.martinezfelip@research.uwa.edu.au" class="contact-link">
+                            <a href="mailto:martinezfelipd@gmail.com" class="contact-link">
                                 <i class="fas fa-envelope"></i>
                                 <span>Email</span>
                             </a>
