--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez Felip - Teaching</title>
+    <title>Daniel Martínez-Felip - Teaching</title>
     <style>
         body {
             font-family: 'Cambria', 'Times New Roman', serif;
