--- a/teaching.html
+++ b/teaching.html
@@ -126,7 +126,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Daniel Martínez Felip</h1>
+            <h1>Daniel Martínez-Felip</h1>
             <h2>Teaching</h2>
             <nav>
                 <ul>
