--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -104,7 +104,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Daniel Martínez Felip</h1>
+            <h1>Daniel Martínez-Felip</h1>
             <h2>Curriculum Vitae</h2>
             <nav>
                 <ul>
