--- a/research.html
+++ b/research.html
@@ -139,19 +139,31 @@
         
         
         <div class="content">
-            <div class="section">
-                <h2>Working Papers</h2>
-                <p>
-                    <a href="https://doi.org/10.31235/osf.io/vy6z2_v5">How does experienced behaviour change normative expectations regarding socially beneficial actions?</a><br>
-                    <em>with Steven G.M. Schilizzi and Chi Nguyen</em>
-                </p>
-                <p>
-<a
-href="https://doi.org/10.31235/osf.io/j7usg_v1">From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours</a><br>
-                    <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em>
-                </p>
-            </div>
-        </div>
+    <div class="section">
+        <h2>Working Papers</h2>
+
+        <p>
+            <a href="https://doi.org/10.31235/osf.io/vy6z2_v5">
+                How does experienced behavior change normative expectations regarding socially beneficial actions?
+            </a><br>
+            <em>with Steven G.M. Schilizzi and Chi Nguyen</em><br>
+            <strong>Under review</strong> at the <em>Journal of Behavioral and Experimental Economics</em>.
+        </p>
+
+        <p>
+            <a href="https://doi.org/10.31235/osf.io/j7usg_v1">
+                From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors
+            </a><br>
+            <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
+            <strong>Under review</strong> at the <em>Journal of Economic Behavior &amp; Organization</em>.
+        </p>
+
+        <p>
+            <a href="#">
+                Norm Heterogeneity and the Emergence of Cooperation: A Spatial Agent-Based Model of Conditional Cooperation
+            </a><br>
+            <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
+            <strong>In preparation</strong>.
+        </p>
     </div>
-</body>
-</html>
+</div>
