--- a/research.html
+++ b/research.html
@@ -147,7 +147,7 @@
                 How does experienced behavior change normative expectations regarding socially beneficial actions?
             </a><br>
             <em>with Steven G.M. Schilizzi and Chi Nguyen</em><br>
-            <strong>Under review</strong> at the <em>Journal of Behavioral and Experimental Economics</em>.
+            <strong>Revise and resumbit</strong> at the <em>Journal of Behavioral and Experimental Economics</em>.
         </p>
 
         <p>
