--- a/research.html
+++ b/research.html
@@ -155,7 +155,7 @@
                 From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors
             </a><br>
             <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
-            <strong>Under review</strong> at the <em>Journal of Economic Behavior &amp; Organization</em>.
+            <strong>Being revised for resubmission</strong>.
         </p>
 
         <p>
