--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         background: white;
         padding: 30px;
         border: 1px solid #ddd;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     .content-table {
         width: 100%;
